loadTexture(): Log the texture name and id when a texture is loaded. log a message with the texture name if a texture cannot be loaded instead of crashing with an IllegalArgumentException.